# goodseed-cli

./: .gitignore  DOCS.md  README.md  pyproject.toml
examples/: mlp.py
src/goodseed/: __init__.py  cli.py  config.py  projects.py  run.py  server.py  storage.py  sync.py  utils.py
src/goodseed/monitoring/: __init__.py  console_capture.py  daemon.py  hardware.py  manager.py
src/goodseed/neptune/: __init__.py  _handler.py  _run.py  _stubs.py
src/goodseed/neptune_scale/: __init__.py  _run.py  _types.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_remote_sync.py  test_run.py  test_storage.py  test_utils.py
