[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goodseed"
version = "0.1.0"
description = "ML experiment tracker with local-first durability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Goodseed Team" }
]
keywords = ["machine-learning", "experiment-tracking", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
]
examples = [
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
goodseed = "goodseed.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goodseed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

